# ml_platform

./: Makefile  README.md  docker-compose.yml  pyproject.toml
src/: config.py  log_mlflow.py  main.py
