[project]
name = "ml-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mlflow>=2.19.0",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.8.4",
]
